--- a/index.html
+++ b/index.html
@@ -137,9 +137,14 @@
 
     <!-- Export -->
     <div class="control-block">
-      <button id="btnExport" style="background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%); font-size: 15px; padding: 14px;">
-        📥 Exporter l'affiche
-      </button>
+      <div class="button-group">
+        <button id="btnExport" style="background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%); font-size: 15px; padding: 14px;">
+          📥 Exporter
+        </button>
+        <button id="btnShare" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); font-size: 15px; padding: 14px;">
+          🔗 Partager
+        </button>
+      </div>
     </div>
 
   </div>
